samples/_failures_safe/1761694422_b975e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_149dfc36.c: In function ‘main’:
./samples/SAFE/__tmp_149dfc36.c:164:9: error: expected expression at end of input
  164 |         memcmp(input_buffer.data,
      |         ^~~~~~
./samples/SAFE/__tmp_149dfc36.c:164:9: error: too few arguments to function ‘memcmp’
In file included from ./samples/SAFE/__tmp_149dfc36.c:4:
/usr/include/string.h:64:12: note: declared here
   64 | extern int memcmp (const void *__s1, const void *__s2, size_t __n)
      |            ^~~~~~
./samples/SAFE/__tmp_149dfc36.c:164:9: error: expected declaration or statement at end of input
  164 |         memcmp(input_buffer.data,
      |         ^~~~~~
